fix: fix displaying of author of the day component on small screens

--- a/src/components/authorOfTheDay/authorOfTheDay.module.css
+++ b/src/components/authorOfTheDay/authorOfTheDay.module.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+}
+
 .author {
   display: grid;
   grid-template-areas:
@@ -37,6 +41,7 @@
 
 .author_photo {
   grid-area: photo;
+  max-height: 300px;
   padding: 10px;
 }
 
@@ -46,44 +51,32 @@
   text-decoration: none;
 }
 
-@media only screen and (max-width: 900px) {
-  .author {
-    grid-template-columns: 70% 30%;
-    grid-template-areas:
-      "header header"
-      "name photo"
-      "date photo"
-      "vita vita"
-      "button button";
-  }
-
-  .author_name {
-    padding: 0 15px;
-  }
-
-  .author_date {
-    padding: 0 10px;
-  }
-
-  .author_btn {
-    margin: 0 auto;
-  }
-}
-
 @media only screen and (max-width: 700px) {
   .author {
     grid-template-columns: 100%;
     grid-template-areas:
       "header"
+      "photo"
       "name"
       "date"
-      "photo"
       "vita"
       "button";
   }
 
   .author_photo {
     margin: 0 auto;
+  }
+
+  .author_name {
+    text-align: center;
+  }
+
+  .author_date {
+    text-align: center;
+  }
+
+  .author_btn {
+  margin: 0 auto;
   }
 }
 
